--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,16 @@ body {
     position:sticky;
     top:-150px; 
     /* + 48px */
+    background-size:cover;
+ }
+ .bg-hero h1{
+    color:white;
+    font-weight: 500;
+    text-shadow: #000000 1px 1px 3px;
+ }
+ .bg-hero p{
+    color:white;
+    text-shadow: 2px 2px 2px black;
  }
 
 /* CALLOUT */
@@ -31,7 +41,6 @@ img:not(footer img){
     width:50vw;
     margin:2vh 0;
     box-shadow: 3px 3px 3px #000000;
-
 }
 
 figure{
@@ -52,14 +61,20 @@ footer img{
     right:100px;
     bottom:8px;
     display:none;
+    filter: drop-shadow(3px 3px 4px black);
+    z-index:99;
 }
 .home{
     z-index: -10
 }
 iframe{
-    box-shadow: 3px 3px 3px #000000;
+    box-shadow: 1px 1px 1px #000000;
     border:solid 2px white;
-
+}
+.blur-layer{
+    margin:0;
+    padding:0;
+    /* backdrop-filter: blur(5px); */
 }
 
 /* footer */
