--- a/static/style.css
+++ b/static/style.css
@@ -92,6 +92,10 @@ iframe{
     z-index:-99;
 }
 
+.table-container{
+    background-color: white;
+}
+
 /* footer */
 footer a { color: white; font-weight: bold; text-decoration: none; }
 footer a:hover { color: white; text-decoration: underline; }
